# xml2dataclass

./: .gitignore  LICENSE  Makefile  README.md  example.py  pyproject.toml  sandbox.ipynb
sandbox/: sandbox.ipynb
tests/: test_xml2dataclass.py
tests/py/: country_data.py  keywords.py  senate_vote_menu.py
tests/xml/: keywords.xml
xml2dataclass/: __main__.py  argument_parser.py  main.py  types.py
