[project]
name = "xml2dataclass"
version = "0.0.1"
authors = [
  { name="David Thuman", email="davidmthuman@gmail.com" },
]
description = "Generate Python dataclass files from XML"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["xml2dataclass"]

[project.urls]
Homepage = "https://github.com/davidthuman/xml2dataclass"
Issues = "https://github.com/davidthuman/xml2dataclass/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"